...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <ListView
        android:id="@+id/buckyListView"
        android:layout_width="0dp"
        android:layout_height="509dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
...
